-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.2.0
-
None
-
4bf5f4bd948825c4e9c031adfdffaf1a7166470a
QtQuick 1.1 introduced the REVISION flag to Q_PROPERTY. Qmldump currently does not handle it and the property will appear to be accessible for all versions.
- is required for
-
QTCREATORBUG-5108 Qt Creator can suggests the method "itemAt" of QML element "Repeater", but prompt "itemAt" is undefined when running
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-3907 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
656,1 | QmlJS: Respect the REVISION property for methods and properties. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |